Banners in home, little description in contact and some styles

--- a/cosmos/contact_app/templates/contact.html
+++ b/cosmos/contact_app/templates/contact.html
@@ -2,7 +2,13 @@
 {% block content %}                          
 
 {%load static%}
-<h1 class="serif text-center my-5" style="font-size: 4rem;">Somos <span class="fst-italic">Cosmos</span></h1>
+<h1 class="serif text-center text-black my-5" style="font-size: 4rem;">Somos <span class="fst-italic">Cosmos</span></h1>
+<div class="section bg-cream text-black">
+    <h2 class="title">Creado por estudiantes para la comunidad</h2>
+    <p class="section-text">
+        Este proyecto facilita la búsqueda de diversas oportunidades académicas y profesionales. <br> Nuestro objetivo es ayudarte a encontrar la carrera, curso, beca o universidad que mejor se ajuste a tus intereses y aspiraciones.
+    </p>
+</div>
 <div class="video-container">
     <video class="video-background" src="{% static 'vid/contact.mp4' %}" autoplay loop muted playsinline></video>
     <div class="overlay"></div>
