--- a/cosmos/static/css/common.css
+++ b/cosmos/static/css/common.css
@@ -54,24 +54,6 @@ body {font-family: 'Garet', sans-serif; font-size: larger;}
     justify-content: space-between;
 }*/
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .video-container {
     position: relative;
     width: 100%;
@@ -106,4 +88,32 @@ body {font-family: 'Garet', sans-serif; font-size: larger;}
     z-index: 2; /* Above overlay */
     color: white; /* Text color */
     padding: 20px; /* Adjust as needed */
+}
+
+.section {
+    padding: 20px;
+    margin: 20px 0;
+    border-radius: 8px;
+    color: #333;
+}
+
+.card-container {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+
+.card_div {
+    background-color: #FFFFFF;
+    border: 1px solid #E0E0E0;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 200px;
+    text-align: center;
+}
+
+.stars {
+    color: #FFD700;
+    margin: 10px 0;
 }
