--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -69,4 +69,52 @@
     
 </div>    
 
+<br>
+
+<div class="section bg-reddish text-white py-5">
+    <h2 class="title text-center mb-3">¡Conoce a nuestros usuarios!</h2>
+    <p class="section-text text-center mb-4">Estas son algunas experiencias de nuestros usuarios con Cosmos.</p>
+    <div class="card-container d-flex justify-content-center gap-3">
+        <div class="col-3 mb-5 card p-3 text-center bg-cream text-black">
+            <h3 class="title mt-2 mb-2">Pablo</h3>
+            <div class="stars">★★★★★</div>
+            <p>"Cosmos me ayudó a encontrar lo que estaba buscando. Excelente plataforma!"</p>
+        </div>
+        <div class="col-3 mb-5 card p-3 text-center bg-cream text-black">
+            <h3 class="title mt-2 mb-2">Martina</h3>
+            <div class="stars">★★★★★</div>
+            <p>"Muy útil y fácil de usar. Recomendado para estudiantes que buscan oportunidades."</p>
+        </div>
+        <div class="col-3 mb-5 card p-3 text-center bg-cream text-black">
+            <h3 class="title mt-2 mb-2">Julia</h3>
+            <div class="stars">★★★★☆</div>
+            <p>"Cosmos me ayudó a encontrar becas y cursos que nunca hubiera descubierto solo."</p>
+        </div>
+    </div>
+</div>
+
+<br>
+
+<div class="section bg-cream w-100 py-5 text-black">
+    <h2 class="title text-center mb-3">Beneficios exclusivos</h2>
+    <p class="section-text text-center mb-4">Sé una estrella con Cosmos Premium</p>
+    <div class="card-container d-flex justify-content-center gap-4">
+        <div class="col-3 mb-4 card p-3 text-center justify-content-center">
+            <h3 class="title">Foro exclusivo</h3>
+            <p>Conectate con otros usuarios para compartir experiencias.</p>
+            <a class="btn btn-styles me-2" style="border-radius: 25px;" href="#">VER FORO</a>
+        </div>
+        <div class="col-3 mb-4 card p-3 text-center justify-content-center">
+            <h3 class="title">Apuntes a tu alcance</h3>
+            <p>Accedé a una variedad de materiales académicos.</p>
+            <a class="btn btn-styles me-2" style="border-radius: 25px;" href="#">VER MATERIAL</a>
+        </div>
+        <div class="col-3 mb-4 card p-3 text-center justify-content-center">
+            <h3 class="title">Elegí tus favoritos</h3>
+            <p>Lleva un registro de las carreras y cursos que más te interesan.</p>
+            <a class="btn btn-styles me-2" style="border-radius: 25px;" href="#">VER FAVORITOS</a>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
