--- a/cosmos/contact_app/templates/contact.html
+++ b/cosmos/contact_app/templates/contact.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}{% block title %}Cosmos - Nosotros{% endblock %}
+{% extends "base.html" %}{% block title %} - Nosotros{% endblock %}
 {% block content %}                          
 
 {%load static%}
 <h1 class="serif text-center text-black my-5" style="font-size: 4rem;">Somos <span class="fst-italic">Cosmos</span></h1>
-<div class="section bg-cream text-black">
+<div class="rounded p-4 mb-3 bg-cream text-black">
     <h2 class="title">Creado por estudiantes para la comunidad</h2>
-    <p class="section-text">
+    <p>
         Este proyecto facilita la búsqueda de diversas oportunidades académicas y profesionales. <br> Nuestro objetivo es ayudarte a encontrar la carrera, curso, beca o universidad que mejor se ajuste a tus intereses y aspiraciones.
     </p>
 </div>
