--- a/cosmos/uni_app/templates/compare.html
+++ b/cosmos/uni_app/templates/compare.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}Cosmos - Comparador{% endblock %}
+{% extends "base.html" %}{% block title %} - Comparador{% endblock %}
 {% block content %}                          
 
 <h2 class="title fs-1 mb-4">COMPARADOR DE {{type|upper}}</h2>
