--- a/cosmos/uni_app/templates/many.html
+++ b/cosmos/uni_app/templates/many.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}Cosmos - {{type}}{% endblock %}
+{% extends "base.html" %}{% block title %} - {{type}}{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: unis, cats & carreras -->
 
     {% load static %}
