--- a/cosmos/auth_app/templates/login.html
+++ b/cosmos/auth_app/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}Cosmos - Login{% endblock %}
+{% extends "base.html" %}{% block title %} - Login{% endblock %}
 {% block content %}                          
 
 <div class="d-flex justify-content-center align-items-center">                         
