Changes not finished

--- a/cosmos/auth_app/templates/login.html
+++ b/cosmos/auth_app/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}{% block title %} - Login{% endblock %}
 {% block content %}                          
 
-<div class="d-flex justify-content-center align-items-center">                         
+<div class="d-flex justify-content-center align-items-center pt-4">                         
     <div class="card text-center" style="max-width: 100rem">
         <div class="row">
 
