--- a/cosmos/auth_app/templates/profile.html
+++ b/cosmos/auth_app/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}{% block title %} - Perfil{% endblock %}
 {% block content %}                          
 
-<div class="container mt-5">
+<div class="container mt-5 pt-4">
     <h1 class="title text-center mb-4">Perfil</h1>
     <div class="text-center">
         {% load static %}
