--- a/cosmos/auth_app/templates/signin.html
+++ b/cosmos/auth_app/templates/signin.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}{% block title %} - Registrarse{% endblock %}
 {% block content %}                          
 
-    <div>
+    <div class="pt-4">
         <h1>Registrate</h1> <br>
 
         <form action="#" method="POST">
