--- a/cosmos/blog_app/templates/blog.html
+++ b/cosmos/blog_app/templates/blog.html
@@ -3,7 +3,7 @@
 
     {% load static %}
 
-    <h2 class="title fs-1 mb-4">Foro</h2> <a href="{% url 'blog:make' %}" class="btn btn-styles">Crea tu post</a>
+    <h2 class="title fs-1 mb-4 pt-4">Foro</h2> <a href="{% url 'blog:make' %}" class="btn btn-styles">Crea tu post</a>
 
     {% if query %}<h1 class="my-3">BUSCANDO POR {{query}}</h1>{% endif %}
 
