--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}{% block title %}{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: unis, cats & carreras -->
     
-<h1 class="serif text-center my-5" style="font-size: 4rem;">"Encontrá tu lugar <br> en el <span class="fst-italic">universo</span>"</h1>
+<h1 class="serif text-center my-5 pt-5" style="font-size: 4rem;">"Encontrá tu lugar <br> en el <span class="fst-italic">universo</span>"</h1>
 {% load static %}
 <div class="d-flex justify-content-center">
     <div class="d-flex align-items-center" style="width: 50%;">
