--- a/cosmos/uni_app/templates/many.html
+++ b/cosmos/uni_app/templates/many.html
@@ -3,7 +3,7 @@
 
     {% load static %}
 
-    <h2 class="title fs-1 mb-4">{{type|upper}}</h2>
+    <h2 class="title fs-1 mb-4 pt-4">{{type|upper}}</h2>
     
     <div class="row row-cols-4 g-4">
         {% for i in result %}
