--- a/cosmos/uni_app/templates/search.html
+++ b/cosmos/uni_app/templates/search.html
@@ -3,7 +3,7 @@
 
     {% load static %}
 
-    <div class="row">
+    <div class="row pt-4">
         <div class="col-10">
             {% if query %}<h1 class="mb-3">BUSCANDO POR {{query}}</h1>{% endif %}        <!-- SHOWS query if any -->
             <h1 class="title mb-4">CARRERAS:</h1> <!-- SHOWS ALL carreras FILTERED -->
