--- a/cosmos/blog_app/templates/make.html
+++ b/cosmos/blog_app/templates/make.html
@@ -3,7 +3,7 @@
 
     {% load static %}
 
-    <h2 class="title fs-1 mb-4">Creación de posts</h2>
+    <h2 class="title fs-1 mb-4 pt-4">Creación de posts</h2>
 
     <div class="row">
 
