--- a/cosmos/contact_app/templates/contact.html
+++ b/cosmos/contact_app/templates/contact.html
@@ -2,7 +2,7 @@
 {% block content %}                          
 
 {%load static%}
-<h1 class="serif text-center text-black my-5" style="font-size: 4rem;">Somos <span class="fst-italic">Cosmos</span></h1>
+<h1 class="serif text-center text-black my-5 pt-5" style="font-size: 4rem;">Somos <span class="fst-italic">Cosmos</span></h1>
 <div class="rounded p-4 mb-3 bg-cream text-black">
     <h2 class="title">Creado por estudiantes para la comunidad</h2>
     <p>
