--- a/cosmos/uni_app/templates/compare.html
+++ b/cosmos/uni_app/templates/compare.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}{% block title %} - Comparador{% endblock %}
 {% block content %}                          
 
-<h2 class="title fs-1 mb-4">COMPARADOR DE {{type|upper}}</h2>
+<h2 class="title fs-1 mb-4 pt-4">COMPARADOR DE {{type|upper}}</h2>
 <div class="dropdown">
     <button class="btn btn-styles dropdown-toggle" type="button" data-bs-toggle="dropdown">Cambiar comparador</button>
     <ul class="dropdown-menu">
