--- a/cosmos/uni_app/templates/one.html
+++ b/cosmos/uni_app/templates/one.html
@@ -99,7 +99,7 @@
                 <span class="title fs-3">Beca por:</span> ${{ one.precio|to_int }} pesos<br>
                 <a class="title fs-3" href="{{ one.enroll }}">Postularse</a>
             </div>
-            <p class="mt-3 fs-5">Para más información, consule la página oficial de la institución</p>
+            <p class="mt-3 fs-5">Para más información, consulte la página oficial de la institución.</p>
         </div>
 
     {%endif%}
