The same as before

--- a/cosmos/uni_app/templates/one.html
+++ b/cosmos/uni_app/templates/one.html
@@ -51,7 +51,7 @@
                 <span class="title fs-3">Modalidad:</span> {{ one.modalidad }}<br>
                 <span class="title fs-3">Duración:</span> {{ one.duration }} años
             </div>
-            <p class="mt-3 fs-5">Para más información, consule la página oficial de la institución</p>
+            <p class="mt-3 fs-5">Para más información, consulte la página oficial de la institución.</p>
         </div>
 
     {% elif type == "cursos" %}
@@ -76,7 +76,7 @@
                 <span class="title fs-3">Duración:</span> {{ one.duration }} meses<br>
                 <a class="title fs-3" href="{{ one.enroll }}">Inscribirse</a>
             </div>
-            <p class=" mt-3 fs-5">Para más información, consule la página oficial de la institución</p>
+            <p class=" mt-3 fs-5">Para más información, consulte la página oficial de la institución.</p>
         </div>
 
     {% elif type == "becas" %}
